--- a/style.css
+++ b/style.css
@@ -80,16 +80,22 @@ nav ul li a:hover::after {
 }
 .row {
   display: flex;
+  /* flex-direction: column; */
   justify-content: space-between;
   flex-wrap: wrap;
 }
 .about-col-1 {
-  flex-basis: 35%;
+  flex-basis: 30%;
+  overflow: hidden;
+  align-items: center;
+  justify-content: center;
+  border-radius: 15px;
 }
 .about-col-1 img {
-  /* width: 100%; */
-  height: 75vh;
-  border-radius: 15px;
+  justify-content: center;
+  width: 100%;
+  height: 55vh;
+  object-fit: cover;
 }
 .about-col-2 {
   flex-basis: 60%;
