--- a/style.css
+++ b/style.css
@@ -212,6 +212,9 @@ nav ul li a:hover::after {
   position: relative;
   overflow: hidden;
 }
+.work.hidden{
+  display: none;
+}
 .work img {
   width: 100%;
   border-radius: 10px;
